test2-2023-01-20.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 0.9281 seconds

  ----Wall Time----  ----Name----
    0.9268 ( 99.9%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    0.8675 ( 93.5%)    Parse modules
    0.0013 (  0.1%)  Rest
    0.9281 (100.0%)  Total

{
  totalTime: 0.937,
  maxMemory: 152596480
}
